tests/fail/elaboration/unexpected-input/unbound-head-1.fathom
//~ exit-code = 1

f x
